[package]
name = "roblox_asset_downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.50.0", features = ["full"]}
axum = {version = "0.8.8"}
reqwest = { version = "0.13.2", features = ["json", "cookies", "gzip", "deflate", "brotli"] }
serde = {version = "1.0.228", features = ["derive"]}
async-stream = {version="0.3.6"}
futures-core = {version = "0.3.32"}
futures-util = {version="0.3.32"}
serde_json = "1.0.149"
file-format = {version = "0.29.0"}